[project]
name = "fantasy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.11.0",
    "asyncio==4.0.0",
    "certifi==2025.10.5",
    "charset-normalizer==3.4.4",
    "espn-api==0.45.1",
    "greenlet==3.2.4",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "idna==3.11",
    "joblib==1.5.2",
    "jolib==0.0.1",
    "mypy==1.18.2",
    "mypy-extensions==1.1.0",
    "numpy==2.3.4",
    "pandas==2.3.3",
    "pathspec==0.12.1",
    "pydantic==2.12.3",
    "pydantic-core==2.41.4",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.2.1",
    "pytz==2025.2",
    "requests==2.32.5",
    "scikit-learn==1.7.2",
    "scipy==1.16.3",
    "six==1.17.0",
    "sniffio==1.3.1",
    "sqlalchemy==2.0.44",
    "sqlmodel==0.0.27",
    "tenacity==9.1.2",
    "threadpoolctl==3.6.0",
    "types-pytz==2025.2.0.20251108",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "tzdata==2025.2",
    "urllib3==2.2.3",
]

[dependency-groups]
dev = [
    "ruff>=0.14.13",
]
